--- a/PreachingProgram/PreachingProgram.csproj
+++ b/PreachingProgram/PreachingProgram.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.5"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.5"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+        <PackageReference Include="Radzen.Blazor" Version="7.1.6" />
     </ItemGroup>
 
     <ItemGroup>
