--- a/GestorTeocratico/GestorTeocratico.csproj
+++ b/GestorTeocratico/GestorTeocratico.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.5" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.5" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+        <PackageReference Include="QuestPDF" Version="2025.7.0" />
         <PackageReference Include="Radzen.Blazor" Version="7.1.6" />
     </ItemGroup>
 
