--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,29 @@
 ﻿services:
-  preachingprogram:
-    image: preachingprogram
+  postgres:
+    image: postgres:17
+    container_name: database
+    environment:
+      POSTGRES_DB: gestor_teocratico_db
+      POSTGRES_USER: gestor_user
+      POSTGRES_PASSWORD: gestor_password
+    expose:
+      - "5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  application:
+    image: gestor-teocratico
+    container_name: gestor-teocratico
     build:
       context: .
-      dockerfile: PreachingProgram/Dockerfile
+      dockerfile: GestorTeocratico/Dockerfile
+    environment:
+      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=gestor_teocratico_db;Username=gestor_user;Password=gestor_password
+    depends_on:
+      - postgres
+    ports:
+      - "8080:8080"
+      - "8081:8081"
 
+volumes:
+  postgres_data:
