--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,11 @@
 ﻿services:
-  postgres:
+  database:
     image: postgres:17
     container_name: database
-    environment:
-      POSTGRES_DB: gestor_teocratico_db
-      POSTGRES_USER: gestor_user
-      POSTGRES_PASSWORD: gestor_password
-    expose:
-      - "5432"
+    env_file:
+      - .env
+    ports:
+      - "54332:${POSTGRES_PORT}"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
@@ -17,13 +15,12 @@
     build:
       context: .
       dockerfile: GestorTeocratico/Dockerfile
-    environment:
-      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=gestor_teocratico_db;Username=gestor_user;Password=gestor_password
+    env_file:
+      - .env
     depends_on:
-      - postgres
+      - database
     ports:
       - "8080:8080"
-      - "8081:8081"
 
 volumes:
   postgres_data:
