Add ResendEmailSender service for email confirmation and password reset functionality

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ POSTGRES_PASSWORD=examplepassword
 
 # Connection string for the .NET application
 CONNECTIONSTRINGS__DEFAULTCONNECTION="Host=database;Port=${POSTGRES_PORT};Database=${POSTGRES_DB};Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD}"
+
+##Email Server Configuration
+RESEND__APITOKEN="xxxxxx"
+RESEND__FROMEMAIL="Gestor Teocratico <delivered@resend.dev>"
