--- a/GestorTeocratico/appsettings.Development.json
+++ b/GestorTeocratico/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Resend": {
+    "FromEmail": "Gestor Teocratico <delivered@resend.dev>"
   }
 }
