--- a/GestorTeocratico/GestorTeocratico.csproj
+++ b/GestorTeocratico/GestorTeocratico.csproj
@@ -17,6 +17,7 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
         <PackageReference Include="QuestPDF" Version="2025.7.0" />
         <PackageReference Include="Radzen.Blazor" Version="7.1.6" />
+        <PackageReference Include="Resend" Version="0.1.5" />
     </ItemGroup>
 
     <ItemGroup>
