Update docker-build.yml to conditionally push images based on event type

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -48,8 +48,8 @@ jobs:
           context: .
           file: ./GestorTeocratico/Dockerfile
           platforms: linux/amd64,linux/arm64
-          #push: ${{ github.event_name != 'pull_request' }}
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
+#          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
